--- a/badminton.html
+++ b/badminton.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>Chu Văn An Smashing Team - THPT Chu Văn An</title>
+    <title>Chu Văn An Smashing Team - THPT Chuyên Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -23,7 +23,7 @@
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Là câu lạc bộ cầu lông đầu tiên và duy nhất trực thuộc trường THPT Chu Văn An,  “Chu Văn An” luôn được CST đặt lên đầu tiên như một cách để chúng mình hướng về mái nhà thân thương, “ngạo nghễ” vì là nơi quy tụ những “tinh hoa” của trường Bưởi.</p>
+            <p>Là câu lạc bộ cầu lông đầu tiên và duy nhất trực thuộc trường THPT Chuyên Chu Văn An,  “Chu Văn An” luôn được CST đặt lên đầu tiên như một cách để chúng mình hướng về mái nhà thân thương, “ngạo nghễ” vì là nơi quy tụ những “tinh hoa” của trường Bưởi.</p>
             <div class="image-container">
                 <img src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/322475502_1367352904092880_710761123205778722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xN8XyyIv8xMQ7kNvwGScjVG&_nc_oc=Adk6gT2zzt1Wan25sad9RRFUWA5dyztTq9FnQP-y7MErrEt6PKxOq4x_PUyH1RtT6tI&_nc_zt=23&_nc_ht=scontent.fhan14-3.fna&_nc_gid=ipjh4mm-eX49f_Ge5X-6Ow&oh=00_AfjPJEy1VLVcNQR-8ie357lJbFmbqvCDUJtBgZwn2qE8AQ&oe=691E705E" alt="CLB Cầu lông" style="max-width: 50%; height: auto;">
             </div>
@@ -48,10 +48,11 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
 </body>
 </html>
+
 
