--- a/sport.html
+++ b/sport.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>CLB Thể thao - THPT Chu Văn An</title>
+  <title>CLB Thể thao - THPT Chuyên Chu Văn An</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>
-      <a href="index.html">Câu lạc bộ Thể thao - THPT Chu Văn An</a>
+      <a href="index.html">Câu lạc bộ Thể thao - THPT Chuyên Chu Văn An</a>
     </h1>
   </header>
 
@@ -22,7 +22,7 @@
     <section class="intro">
       <h2>CLB Thể thao - Nơi Hội Tụ Những Nhà Vô Địch</h2>
       <p>
-        CLB Thể thao của trường THPT Chu Văn An là nơi các bạn học sinh đam mê vận động cùng nhau rèn luyện, thi đấu và chinh phục những đỉnh cao mới.
+        CLB Thể thao của trường THPT Chuyên Chu Văn An là nơi các bạn học sinh đam mê vận động cùng nhau rèn luyện, thi đấu và chinh phục những đỉnh cao mới.
       </p>
     </section>
 
@@ -31,8 +31,8 @@
       <!-- Row 1: Text left - Image right -->
       <div class="row">
         <div class="text-col">
-          <h2><a href="volleyball.html">CLB Bóng đá</a></h2>
-          <p>Chu Văn An Football Club - nơi thoả mãn niềm đam mê bóng đá của các học sinh trường THPT Chu Văn An</p>
+          <h2><a href="volleyball.html">Chu Văn An Football Club </a></h2>
+          <p>Nơi thoả mãn niềm đam mê bóng đá của các học sinh trường THPT Chuyên Chu Văn An</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/465605599_605381211828364_5833549740649003973_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=8KuJyKKlzBwQ7kNvwH0icFV&_nc_oc=AdlsTXJrZWih2X63fFywepeQ1_8GAbRlfGOwMn8cgamkFxTz2rkT_RZ0xFSiXrAHPkc&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=p55iCHQP2fxMJYnbUuGQfA&oh=00_AfgK_YkWQ9EMik2rmZOj9J53Q7YisUuFnTd0OZDrrtcppA&oe=691E8425" alt="CLB Bóng chuyền">
@@ -42,8 +42,8 @@
       <!-- Row 2: Text right - Image left -->
       <div class="row reverse">
         <div class="text-col">
-          <h2><a href="badminton.html">CLB Cầu lông</a></h2>
-          <p>CLB cầu lông trường THPT Chuyên Chu Văn An - Hà Nội</p>
+          <h2><a href="badminton.html">CST - CVA Smashing Team</a></h2>
+          <p>Nơi những cú smash rực lửa và tinh thần fair-play tạo nên bản sắc riêng của những tay vợt trẻ đầy nhiệt huyết. - Hà Nội</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/322475502_1367352904092880_710761123205778722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xN8XyyIv8xMQ7kNvwGScjVG&_nc_oc=Adk6gT2zzt1Wan25sad9RRFUWA5dyztTq9FnQP-y7MErrEt6PKxOq4x_PUyH1RtT6tI&_nc_zt=23&_nc_ht=scontent.fhan14-3.fna&_nc_gid=ipjh4mm-eX49f_Ge5X-6Ow&oh=00_AfjPJEy1VLVcNQR-8ie357lJbFmbqvCDUJtBgZwn2qE8AQ&oe=691E705E" alt="CLB Cầu lông">
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="text-col">
           <h2><a href="basketball.html">CLB Bóng rổ</a></h2>
-          <p>Đội bóng rổ trẻ trung, giành giải cao ở các cuộc thi cấp cụm</p>
+          <p>Nơi những cú ném chuẩn xác, những pha bóng mạnh mẽ và tinh thần đồng đội thăng hoa trên từng trận đấu.</p>
         </div>
         <div class="image-col">
           <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/301451907_559627299285733_1880711381416224415_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=hfbHvf3pQvgQ7kNvwEi_r-e&_nc_oc=AdnT49reCnm0t91WhRNoVYQDqCItdXBcVNwBQsdeBS2jX4_OBCWLfIJq9ypFke09gw8&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=GDRWwmghoL2n40YFYd-EJg&oh=00_Afj3hSgXWesQcvOB4_cI2KxUob0RGmCIthOgKMp9YCDgRA&oe=691E8207" alt="CLB Bóng rổ">
@@ -73,6 +73,7 @@
 </body>
 
 </html>
+
 
 
 
