--- a/sport.html
+++ b/sport.html
@@ -53,7 +53,7 @@
       <!-- Row 3: Text left - Image right -->
       <div class="row">
         <div class="text-col">
-          <h2><a href="basketball.html">CLB Bóng rổ</a></h2>
+          <h2><a href="basketball.html">CVA Basketball Team </a></h2>
           <p>Nơi những cú ném chuẩn xác, những pha bóng mạnh mẽ và tinh thần đồng đội thăng hoa trên từng trận đấu.</p>
         </div>
         <div class="image-col">
@@ -73,6 +73,7 @@
 </body>
 
 </html>
+
 
 
 
