--- a/badminton.html
+++ b/badminton.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>Chu Văn An Smashing Team - THPT Chuyên Chu Văn An</title>
+    <title>CVA Smashing Team  - THPT Chuyên Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 
     <main>
         <section class="intro">
-            <h2><a href="#">Chu Văn An Smashing Team</a></h2>
+            <h2><a href="#">CST - CVA Smashing Team </a></h2>
             <p>Câu lạc bộ cầu lông năng động, nơi tạo cơ hội cho học sinh yêu thích bộ môn này được luyện tập và thi đấu.</p>
         </section>
 
@@ -54,5 +54,6 @@
 </footer>
 </body>
 </html>
+
 
 
