--- a/basketball.html
+++ b/basketball.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>Chu Văn An Basketball Team - THPT Chu Văn An</title>
+    <title>CVA Basketball Team - THPT Chuyên Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -17,13 +17,13 @@
 
     <main>
         <section class="intro">
-            <h2><a href="#">Chu Văn An Basketball Team</a></h2>
+            <h2><a href="#">CVA Basketball Team </a></h2>
             <p>Đội bóng rổ trẻ trung, đầy nhiệt huyết với phong cách thi đấu hiện đại và tinh thần đồng đội mạnh mẽ.</p>
         </section>
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>CLB bóng rổ trường THPT Chu Văn An được thành lập nhằm tạo sân chơi cho các bạn trẻ đam mê bóng rổ, rèn luyện kỹ năng cá nhân, chiến thuật và thể lực tốt.</p>
+            <p>CLB bóng rổ trường THPT Chuyên Chu Văn An được thành lập nhằm tạo sân chơi cho các bạn trẻ đam mê bóng rổ, rèn luyện kỹ năng cá nhân, chiến thuật và thể lực tốt.</p>
             <div class="image-container">
                 <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/301451907_559627299285733_1880711381416224415_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=hfbHvf3pQvgQ7kNvwEi_r-e&_nc_oc=AdnT49reCnm0t91WhRNoVYQDqCItdXBcVNwBQsdeBS2jX4_OBCWLfIJq9ypFke09gw8&_nc_zt=23&_nc_ht=scontent.fhan14-1.fna&_nc_gid=GDRWwmghoL2n40YFYd-EJg&oh=00_Afj3hSgXWesQcvOB4_cI2KxUob0RGmCIthOgKMp9YCDgRA&oe=691E8207" alt="CLB Bóng rổ" style="max-width: 50%; height: auto;">
             </div>
@@ -44,9 +44,10 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
 </body>
 </html>
+
