--- a/dance.html
+++ b/dance.html
@@ -25,17 +25,22 @@
             <h3>Tổng quan</h3>
             <p>Câu lạc bộ Drama của trường là điểm đến lý tưởng cho các bạn yêu thích diễn xuất, biên kịch và nghệ thuật sân khấu.</p>
 
-            <h3>Hoạt động tiêu biểu</h3>
-            <p>
-                <ul>
-                    <li>Dàn dựng vở diễn "Tuổi học trò" tại lễ tổng kết 2024</li>
-                    <li>Biểu diễn múa – kịch tại Hội diễn Văn nghệ Quận</li>
-                </ul>
-            </p>
+            <div class="image-container">
+                <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/541993174_1345667094228760_2007393019747298942_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VA-bO3MRKjcQ7kNvwGHuhmm&_nc_oc=Adm-f-JZBDYKjHQNEi3AVfYkwMBUKy2bnhP_KxMOOnQSht28jA71le3ALAdgsyAGu8PY7DmBwUssjH9TYIQ_7V2b&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=UoEHnlYQGGvU4VaDbEWJ7g&oh=00_AfifhOOHDAfBFPBJFV6zRggkNplNQR5UpD_rdCmZd8euHg&oe=691E7D31" 
+                alt="CLB Kịch nghệ" style="max-width: 50%; height: auto;">
+            </div>
+
+            <h3>Dự án nghệ thuật tiêu biểu</h3>
+            <ul>
+                <li>Dàn dựng vở diễn "Tuổi học trò" tại lễ tổng kết 2024</li>
+                <li>Biểu diễn múa – kịch tại Hội diễn Văn nghệ Quận</li>
+            </ul>
 
             <div class="image-container">
-                <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/541993174_1345667094228760_2007393019747298942_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VA-bO3MRKjcQ7kNvwGHuhmm&_nc_oc=Adm-f-JZBDYKjHQNEi3AVfYkwMBUKy2bnhP_KxMOOnQSht28jA71le3ALAdgsyAGu8PY7DmBwUssjH9TYIQ_7V2b&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=UoEHnlYQGGvU4VaDbEWJ7g&oh=00_AfifhOOHDAfBFPBJFV6zRggkNplNQR5UpD_rdCmZd8euHg&oe=691E7D31" alt="CLB Kịch nghệ" style="max-width: 50%; height: auto;">
+                <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t39.30808-6/484777634_1139373591311606_3308036632822023814_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=AaWX9fpkkFMQ7kNvwH_zkP5&_nc_oc=Adk6fMjyb6An1-pPo1p89NVWqyxZCfBllZFsv0n-DloZZg4GEWZd2x-k0Frj8sgXSSc&_nc_zt=23&_nc_ht=scontent.fhan14-2.fna&_nc_gid=eaA_8qFDufTF8TmnPwxnOA&oh=00_AfjThmGKEgBTCs5k21_eydNAr1kInMxyxfS7CH8-JzsLYw&oe=691EFCDE"
+                alt="Dự án CLB Drama" style="max-width: 50%; height: auto;">
             </div>
+
         </section>
     </main>
 
@@ -49,6 +54,3 @@
 </footer>
 </body>
 </html>
-
-
-
