--- a/draw.html
+++ b/draw.html
@@ -18,23 +18,29 @@
     <main>
         <section class="intro">
             <h2><a href="#">Chu D'Art</a></h2>
-            <p>CLB Mỹ thuật sáng tạo – nơi những ý tưởng nghệ thuật được thể hiện qua từng tác phẩm độc đáo.</p>
+            <p>CLB Mỹ thuật của trường THPT Chuyên Chu Văn An – nơi những ý tưởng độc đáo được thổi hồn vào từng nét vẽ, tạo nên một không gian sáng tạo đầy cảm hứng.</p>
         </section>
 
         <section class="activities">
             <h3>Tổng quan</h3>
-            <p>Chu D'Art là sân chơi cho học sinh yêu thích hội họa, thiết kế và nhiếp ảnh. CLB khuyến khích sự sáng tạo và khám phá phong cách nghệ thuật cá nhân.</p>
-
-            <h3>Hoạt động nổi bật</h3>
-            <p>
-                <ul>
-                    <li>Triển lãm tranh "Thanh xuân sắc màu" 2024</li>
-                    <li>Workshop Sketching cơ bản và Digital Art</li>
-                </ul>
-            </p>
+            <p>Là CLB Mỹ thuật chính thức của trường THPT Chuyên Chu Văn An, Chu D’Art luôn tự hào mang tinh thần “Chu Văn An” vào từng tác phẩm nghệ thuật. Đây là nơi hội tụ những học sinh yêu hội họa, thiết kế và nhiếp ảnh, cùng nhau tạo nên một cộng đồng sáng tạo trẻ trung và đầy màu sắc.</p>
 
             <div class="image-container">
-                <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/540919152_1074987418134285_2737440980344993791_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ofBhn82zCuQQ7kNvwEyZAvG&_nc_oc=AdmZprlm1Up3LIAOce2wqL45VtEqmZ0751gASBXSa4mgttQs4NLc0WWkJIleMNsj1F794IwkE5PZcVk7jzE1GG5A&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=ia5U_08mk4csxqetufbieg&oh=00_AfiLvyYZ4bE0LHeKSIQQ81vaYMTo-fvwWhbVXwQoN4atBw&oe=691E617F" alt="CLB Mỹ thuật" style="max-width: 50%; height: auto;">
+                <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/540919152_1074987418134285_2737440980344993791_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ofBhn82zCuQQ7kNvwEyZAvG&_nc_oc=AdmZprlm1Up3LIAOce2wqL45VtEqmZ0751gASBXSa4mgttQs4NLc0WWkJIleMNsj1F794IwkE5PZcVk7jzE1GG5A&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=ia5U_08mk4csxqetufbieg&oh=00_AfiLvyYZ4bE0LHeKSIQQ81vaYMTo-fvwWhbVXwQoN4atBw&oe=691E617F" 
+                     alt="CLB Mỹ thuật" style="max-width: 50%; height: auto;">
+            </div>
+
+            <h3>Thành tích – Hoạt động nổi bật</h3>
+            <ul>
+                <li>Triển lãm tranh “Thanh xuân sắc màu” 2024 – thu hút hơn 300 lượt tham quan.</li>
+                <li>Tổ chức Workshop Sketching cơ bản và Digital Art cho học sinh toàn trường.</li>
+                <li>Đóng góp thiết kế poster cho nhiều sự kiện lớn của trường.</li>
+                <li>Tham gia và đạt giải khuyến khích cuộc thi thiết kế ảnh nghệ thuật cấp quận.</li>
+            </ul>
+
+            <div class="image-container">
+                <img src="https://i.imgur.com/HQk8u4E.jpeg" 
+                     alt="Hoạt động CLB" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
