--- a/draw.html
+++ b/draw.html
@@ -39,7 +39,7 @@
             </ul>
 
             <div class="image-container">
-                <img src="https://i.imgur.com/HQk8u4E.jpeg" 
+                <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/562379967_1114275397538820_6986367958566281906_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=nK2DDVTCB5IQ7kNvwF7Lo5n&_nc_oc=AdmRJ_oG6AnfIEr0hn3sSXJLoKgCgF6duCOJuplokJ8lmKO5Gp-kZHPq2--CgzNueW5c47ptqLm_FloKcxpD7FG2&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=fUJwN7RUlNu3YIiooY-fRA&oh=00_AfhqBs1z8gY_rhLS7cF7insthk_KvGZWawP8YSaOEzmxNw&oe=691FCE86" 
                      alt="Hoạt động CLB" style="max-width: 50%; height: auto;">
             </div>
         </section>
