--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Đăng kí thành viên CLB - THPT Chu Văn An</title>
+<title>Đăng kí thành viên CLB - THPT Chuyên Chu Văn An</title>
 
 <!-- Chỉ CSS cho FORM, KHÔNG CSS header/footer/nav -->
 <style>
@@ -84,7 +84,7 @@
 
     <h1 class="form-title">
         ĐĂNG KÍ THÀNH VIÊN CLB NGOẠI KHÓA<br>
-        TRƯỜNG THPT CHU VĂN AN
+        TRƯỜNG THPT CHUYÊN CHU VĂN AN
     </h1>
 
     <form onsubmit="event.preventDefault(); alert('Đăng kí thành công!');">
@@ -163,7 +163,7 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
