--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
 </body>
 
 </html>
+
