--- a/music.html
+++ b/music.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>UpBand - THPT Chu Văn An</title>
+    <title>UpBand - THPT Chuyên Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -43,11 +43,12 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
 </body>
 </html>
+
 
 
