--- a/music.html
+++ b/music.html
@@ -25,16 +25,19 @@
             <h3>Tổng quan</h3>
             <p>UpBand là CLB âm nhạc của trường, quy tụ các bạn học sinh yêu ca hát, chơi nhạc cụ và sáng tác. Không khí tập luyện luôn tràn đầy năng lượng và cảm hứng nghệ thuật.</p>
 
+            <div class="image-container">
+                <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/493601545_1302156808123745_5171460446683246800_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=c26TsDZ5nyUQ7kNvwGFjItE&_nc_oc=AdmE44uR6j9ZIPn-iD4bWy8fleph3cfcRnEfGCDRkU8tsan6XBegOGUkwiweJxkAf85kRrmMxzAv9kIugdaff2zF&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=NV15fYT7MqYYxOKgCmnq8w&oh=00_Afi8lokxUayyssl1SC9l1NbL2zeIvqRSd5lLr--ZxPYqqw&oe=691FD298" alt="Hoạt động UpBand" style="max-width: 50%; height: auto;">
+            </div>
+
             <h3>Biểu diễn nổi bật</h3>
-            <p>
-                <ul>
-                    <li>Biểu diễn tại Lễ khai giảng 2024–2025</li>
-                    <li>Show âm nhạc "CVA Music Night" 2024</li>
-                </ul>
-            </p>
+            <ul>
+                <li>Biểu diễn tại Lễ khai giảng 2024–2025</li>
+                <li>Show âm nhạc "CVA Music Night" 2024</li>
+            </ul>
 
             <div class="image-container">
-                <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/493601545_1302156808123745_5171460446683246800_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ivoRasQL7HkQ7kNvwEO955o&_nc_oc=AdnuzbHT7Ye-GKj1NXm7YmPoN6uTbU3CLzePnizXwJ6B8sXbdErwPS5D4dq0hmrcAMh61Wv-sK8JzTcMTBRA09-r&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=jYbsA_c26U7wwTbkuuZqug&oh=00_Afh4NW3fFz5Ew7eqGFL3c5t85hc0wWDFGsUsMyGYURMboQ&oe=691E8118" alt="Ban nhạc UpBand" style="max-width: 50%; height: auto;">
+                <img src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/571679785_1469345568071534_6381957029651636727_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=Z8cmTNr3zWAQ7kNvwFgCJOf&_nc_oc=AdnGsG2RNqsFejmogjuLJjaTOHzjpwAz4Bu0Wr-Gm8sduFSe2IBsAOKsR-MrwTwwkSctWpNDIk7foHSYdOssyvb0&_nc_zt=23&_nc_ht=scontent.fhan2-3.fna&_nc_gid=NWl_q51x0x8s-I1okbRMoA&oh=00_AfhTfbjRecd5Cs8rOOhFX4YlmSTjJn3-mdCjgA5zKQOf6A&oe=691FC434"
+                     alt="UpBand biểu diễn" style="max-width: 50%; height: auto;">
             </div>
         </section>
     </main>
@@ -49,6 +52,3 @@
 </footer>
 </body>
 </html>
-
-
-
