--- a/volleyball.html
+++ b/volleyball.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>Chu Văn An Soccer Club - THPT Chu Văn An</title>
+    <title>Chu Văn An Football Club - THPT Chuyên Chu Văn An</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chu Văn An</a></h1>
+        <h1><a href="index.html" style="text-decoration: none; color: white;">Câu lạc bộ ngoại khóa trường THPT Chuyên Chu Văn An</a></h1>
     </header>
 
     <nav>
@@ -17,7 +17,7 @@
 
     <main>
         <section class="intro">
-            <h2><a href="#">Chu Văn An Soccer Club</a></h2>
+            <h2><a href="#">Chu Văn An Football Club</a></h2>
             <p>Đội bóng đá đầy nhiệt huyết và tinh thần fair-play, niềm tự hào của học sinh Chu Văn An.</p>
         </section>
 
@@ -44,11 +44,12 @@
   <h3>Liên hệ:</h3>
   <ul>
     <li>Điện thoại: 03636363636</li>
-    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chu Văn An</a></li>
+    <li>Website: <a href="https://simpmei20nam.github.io/pttt/index.html">CLB Ngoại khóa Trường Chuyên Chu Văn An</a></li>
     <li>Tham gia CLB: <a href="form.html">Mẫu đăng kí</a></li>
   </ul>
 </footer>
 </body>
 </html>
+
 
 
